--- a/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Views/MainWindow.xaml
@@ -9,9 +9,10 @@
     Width="400"
     Height="600"
     ResizeMode="CanResize"
-    ThemeMode="Light"
+    ThemeMode="System"
     mc:Ignorable="d">
     <Grid Margin="20" ShowGridLines="True">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="3*" />
@@ -99,30 +100,25 @@
                     Text="Seconds" />
             </Grid>
         </Grid>
-        <StackPanel
+        <UniformGrid
             Grid.Row="2"
-            HorizontalAlignment="Left"
             VerticalAlignment="Center"
-            Orientation="Horizontal">
+            Columns="2">
             <TextBlock
                 Margin="0,0,10,0"
                 VerticalAlignment="Center"
                 Style="{StaticResource BodyTextBlockStyle}"
                 Text="I want to draw" />
-            <TextBox Text="Images" />
-        </StackPanel>
-        <StackPanel
-            Grid.Row="3"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            Orientation="Horizontal">
-
+            <TextBox HorizontalAlignment="Stretch" Text="Images" />
+        </UniformGrid>
+        <UniformGrid Grid.Row="3" Columns="2">
             <TextBlock
                 Margin="0,0,10,0"
                 VerticalAlignment="Center"
+                Style="{StaticResource BodyTextBlockStyle}"
                 Text="Shuffle images" />
-            <CheckBox />
-        </StackPanel>
+            <CheckBox IsChecked="True" />
+        </UniformGrid>
         <Button
             Grid.Row="4"
             Height="46"
