--- a/Posetrix/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Posetrix/Views/MainWindow.xaml
@@ -2,12 +2,14 @@
     x:Class="Posetrix.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:core="clr-namespace:Posetrix.Core;assembly=Posetrix.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Posetrix"
     Width="400"
     Height="600"
+    d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
     ResizeMode="CanResize"
     ThemeMode="System"
     mc:Ignorable="d">
@@ -109,7 +111,9 @@
                 VerticalAlignment="Center"
                 Style="{StaticResource BodyTextBlockStyle}"
                 Text="I want to draw" />
-            <TextBox HorizontalAlignment="Stretch" Text="0" />
+            <TextBox HorizontalAlignment="Stretch" Text="{Binding Counter}" />
+            <Button Command="{Binding IncrementCommand}" Content="Increment" />
+            <Button Command="{Binding DecrementCommand}" Content="Decrement" />
         </UniformGrid>
         <UniformGrid Grid.Row="3" Columns="2">
             <TextBlock
