--- a/Posetrix/Posetrix/Views/UserControls/ReferencesAdd.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/ReferencesAdd.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
@@ -19,14 +20,24 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Button
+                Name="openSettingsWindowButton"
                 Grid.Column="0"
                 Width="40"
                 Height="40"
                 VerticalAlignment="Center"
+                Click="ShowSettingsWindow_Click"
                 Content="&#xE713;"
                 FontFamily="{StaticResource SymbolThemeFontFamily}"
-                FontSize="16"
-                ToolTip="Settings" />
+                FontSize="16">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Settings" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
             <TextBlock
                 Grid.Column="1"
                 Margin="-40,0,0,0"
@@ -36,10 +47,12 @@
         </Grid>
 
         <Button
+            Name="addReferencesButton"
             Grid.Row="1"
             Height="46"
             Margin="0,10"
             HorizontalAlignment="Stretch"
+            Click="AddReferencesButton_Click"
             Content="&#xE710;"
             FontFamily="{StaticResource SymbolThemeFontFamily}"
             FontSize="20"
