--- a/Posetrix/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Posetrix/Views/MainWindow.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:UserControls="clr-namespace:Posetrix.Views.UserControls"
-    xmlns:core="clr-namespace:Posetrix.Core;assembly=Posetrix.Core"
+    xmlns:core="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -46,6 +46,7 @@
 
         <Grid Grid.Row="6">
             <Button
+     Click="ShowDrawingSessionWindow_Click"
                 Height="46"
                 HorizontalAlignment="Stretch"
                 Content="Start a drawing session"
