--- a/Posetrix/Posetrix/Views/UserControls/ReferencesNumber.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/ReferencesNumber.xaml
@@ -2,7 +2,7 @@
     x:Class="Posetrix.Views.UserControls.ReferencesNumber"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:core="clr-namespace:Posetrix.Core;assembly=Posetrix.Core"
+    xmlns:core="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
