style: add reference image layout

--- a/Posetrix/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Posetrix/Views/MainWindow.xaml
@@ -14,6 +14,7 @@
     MinWidth="400"
     MinHeight="680"
     d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
+    Icon="pack://application:,,,/Images/Icons/book(1).png"
     ResizeMode="CanResize"
     ThemeMode="System"
     mc:Ignorable="d">
@@ -46,9 +47,9 @@
 
         <Grid Grid.Row="6">
             <Button
-     Click="ShowDrawingSessionWindow_Click"
                 Height="46"
                 HorizontalAlignment="Stretch"
+                Click="ShowDrawingSessionWindow_Click"
                 Content="Start a drawing session"
                 Style="{DynamicResource AccentButtonStyle}" />
         </Grid>
