--- a/Posetrix/Posetrix/Views/DrawingSessionWindow.xaml
+++ b/Posetrix/Posetrix/Views/DrawingSessionWindow.xaml
@@ -10,15 +10,161 @@
     Width="600"
     Height="450"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="6*" />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
+    <Window.Resources>
+        <Style
+            x:Key="ControlButton"
+            BasedOn="{StaticResource {x:Type Button}}"
+            TargetType="Button">
+            <Setter Property="Width" Value="50" />
+            <Setter Property="Height" Value="50" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="{StaticResource SymbolThemeFontFamily}" />
+            <Setter Property="FontSize" Value="24" />
+            <Setter Property="Margin" Value="4,0" />
 
-        <Image Name="MyImage" Grid.Row="0" />
+        </Style>
+        <Style
+            x:Key="ImageEditButton"
+            BasedOn="{StaticResource {x:Type Button}}"
+            TargetType="Button">
+            <Setter Property="Width" Value="24" />
+            <Setter Property="Height" Value="24" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="FontFamily" Value="{StaticResource SymbolThemeFontFamily}" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="4,0" />
+            <Setter Property="Padding" Value="0" />
+
+        </Style>
+    </Window.Resources>
+    <Grid Margin="20" ShowGridLines="False">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+
+            <RowDefinition Height="10*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <UniformGrid Grid.Row="0" Columns="2">
+            <TextBlock Text="Image 1/10" />
+            <TextBlock HorizontalAlignment="Right" Text="HH:MM:SS" />
+        </UniformGrid>
+        <Image Name="MyImage" Grid.Row="1" />
         <!--<svg:SvgViewbox Source="Images/undraw_workout_gcgu.svg" Stretch="Uniform" />-->
         <!--<Image Grid.Row="0" Source="pack://application:,,,/Images/undraw_workout_gcgu.png" />-->
+        <StackPanel
+            Grid.Row="2"
+            Margin="0,10"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Orientation="Horizontal">
+            <Button Content="&#xe718;" Style="{StaticResource ImageEditButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Always on top" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xE80A;" Style="{StaticResource ImageEditButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Grid" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xE7C6;" Style="{StaticResource ImageEditButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Mirror" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xe916;" Style="{StaticResource ImageEditButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Timer visibility" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xe746;" Style="{StaticResource ImageEditButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Black and white" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+
+        </StackPanel>
+        <StackPanel
+            Grid.Row="3"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <Button Content="&#xE76B;" Style="{StaticResource ControlButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Previous image" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xE769;" Style="{StaticResource ControlButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Pause" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xE71A;" Style="{StaticResource ControlButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Stop" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xE76C;" Style="{StaticResource ControlButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Next image" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+            <Button Content="&#xE893;" Style="{StaticResource ControlButton}">
+                <Button.ToolTip>
+                    <ToolTip>
+                        <TextBlock
+                            FontFamily="Segoe UI"
+                            FontSize="12"
+                            Text="Next image" />
+                    </ToolTip>
+                </Button.ToolTip>
+            </Button>
+
+        </StackPanel>
     </Grid>
 </Window>
