--- a/Posetrix/Posetrix/Views/UserControls/PracticeModes.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/PracticeModes.xaml
@@ -5,23 +5,33 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
+    d:DataContext="{d:DesignInstance Type=viewmodels:PracticeModesViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <TextBlock
             Grid.Row="0"
+            Margin="0,20"
             HorizontalAlignment="Center"
+            VerticalAlignment="Center"
             Style="{StaticResource SubtitleTextBlockStyle}"
             Text="Practice modes" />
-        <ComboBox Grid.Row="1" SelectedIndex="0">
-            <ComboBoxItem Content="Predefined intervals" />
-            <ComboBoxItem Content="Custom interval" />
-            <ComboBoxItem Content="Class mode" />
-        </ComboBox>
+        <ComboBox
+            Grid.Row="1"
+            DisplayMemberPath="ViewModelName"
+            ItemsSource="{Binding ViewModelsCollection}"
+            SelectedItem="{Binding CurrentViewModel}" />
+        <Grid Grid.Row="2" Margin="0,20">
+            <ContentControl Content="{Binding CurrentViewModel.ViewModelObject}" />
+        </Grid>
+
+        <!--<ContentControl Grid.Row="2" Content="{Binding SelectedItem.Content}" />-->
     </Grid>
 </UserControl>
