--- a/Posetrix/Posetrix/Views/UserControls/CustomInterval.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/CustomInterval.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
+    d:DataContext="{d:DesignInstance Type=viewmodels:CustomIntervalViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -18,15 +20,15 @@
             Grid.Column="0"
             Height="30"
             Margin="0,0,10,0"
-            Text="Hours" />
+            Text="{Binding SessionTimer.Hours}" />
         <TextBox
             Grid.Column="1"
             Height="30"
             Margin="0,0,10,0"
-            Text="Minutes" />
+            Text="{Binding SessionTimer.Minutes}" />
         <TextBox
             Grid.Column="2"
             Height="30"
-            Text="Seconds" />
+            Text="{Binding SessionTimer.Seconds}" />
     </Grid>
 </UserControl>
