--- a/Posetrix/Posetrix/Views/UserControls/ReferencesAdd.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/ReferencesAdd.xaml
@@ -22,8 +22,9 @@
             <Button
                 Name="openSettingsWindowButton"
                 Grid.Column="0"
-                Width="40"
-                Height="40"
+                Width="28"
+                Height="28"
+                Padding="0"
                 VerticalAlignment="Center"
                 Click="ShowSettingsWindow_Click"
                 Content="&#xE713;"
