--- a/Posetrix/Posetrix/Views/UserControls/ReferencesAdd.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/ReferencesAdd.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     d:DesignWidth="800"
+    DataContext="{Binding Path=FoldersAddWindowViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -63,6 +64,6 @@
             Margin="0,0,0,10"
             HorizontalAlignment="Center"
             Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-            Text="100 images in 2 folders" />
+            Text="{Binding ReferenceFolders.Count}" />
     </Grid>
 </UserControl>
