--- a/Posetrix/Posetrix/App.xaml
+++ b/Posetrix/Posetrix/App.xaml
@@ -3,12 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Posetrix"
+    xmlns:services="clr-namespace:Posetrix.Services"
     StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/PresentationFramework.Fluent;component/Themes/Fluent.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <services:ViewModelLocator x:Key="Locator" />
         </ResourceDictionary>
     </Application.Resources>
+
 </Application>
