--- a/Posetrix/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Posetrix/Views/MainWindow.xaml
@@ -2,7 +2,6 @@
     x:Class="Posetrix.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:UserControls="clr-namespace:Posetrix.Views.UserControls"
     xmlns:core="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix"
@@ -13,7 +12,7 @@
     Height="680"
     MinWidth="400"
     MinHeight="680"
-    d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
+    DataContext="{Binding Path=FoldersAddWindowViewModel, Source={StaticResource Locator}}"
     Icon="pack://application:,,,/Images/Icons/book(1).png"
     ResizeMode="CanResize"
     ThemeMode="System"
@@ -38,6 +37,7 @@
             <RowDefinition Height="2*" />
             <!--  Start a sessiom button  -->
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="20" />
 
 
         </Grid.RowDefinitions>
@@ -63,6 +63,6 @@
                 Content="Start a drawing session"
                 Style="{DynamicResource AccentButtonStyle}" />
         </Grid>
-
+        <TextBlock Grid.Row="5" Text="{Binding ReferenceFolders}" />
     </Grid>
 </Window>
