--- a/Posetrix/Posetrix/Views/UserControls/Practice modes control/PracticeModes.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/Practice modes control/PracticeModes.xaml
@@ -6,9 +6,9 @@
     xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
-    d:DataContext="{d:DesignInstance Type=viewmodels:PracticeModesViewModel}"
     d:DesignHeight="200"
     d:DesignWidth="400"
+    DataContext="{Binding Path=PracticeModesViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
