--- a/Posetrix/Posetrix/Views/UserControls/ReferencesNumber.xaml
+++ b/Posetrix/Posetrix/Views/UserControls/ReferencesNumber.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views.UserControls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -16,8 +15,8 @@
             VerticalAlignment="Center"
             Style="{StaticResource BodyTextBlockStyle}"
             Text="I want to draw" />
-        <TextBox HorizontalAlignment="Stretch" Text="{Binding Counter}" />
-        <Button Command="{Binding IncrementCommand}" Content="Increment" />
-        <Button Command="{Binding DecrementCommand}" Content="Decrement" />
+        <TextBox HorizontalAlignment="Stretch" Text="0" />
+        <!--<Button Command="{Binding IncrementCommand}" Content="Increment" />
+        <Button Command="{Binding DecrementCommand}" Content="Decrement" />-->
     </UniformGrid>
 </UserControl>
