--- a/Posetrix/Posetrix/Views/WIndows/FoldersAddWindow.xaml
+++ b/Posetrix/Posetrix/Views/WIndows/FoldersAddWindow.xaml
@@ -1,23 +1,23 @@
 ﻿<Window
-    x:Class="Posetrix.Views.ReferenceFoldersAddWindow"
+    x:Class="Posetrix.Views.FoldersAddWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:Posetrix.Core.Models;assembly=Posetrix.Core"
-    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
+    xmlns:services="clr-namespace:Posetrix.Services"
     Title="Add your references"
     Width="600"
     Height="400"
     MinWidth="600"
     MinHeight="400"
-    d:DataContext="{d:DesignInstance Type=viewmodels:ReferenceFoldersAddWindowViewModel}"
+    DataContext="{Binding Path=FoldersAddWindowViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
-    <Grid Margin="20">
+    <Grid Margin="20" ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="8*" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <ListView
             Grid.Row="0"
@@ -61,7 +61,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid Grid.Row="1" ShowGridLines="True">
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
