--- a/Posetrix/Posetrix/Views/WIndows/SettingsWindow.xaml
+++ b/Posetrix/Posetrix/Views/WIndows/SettingsWindow.xaml
@@ -5,11 +5,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="SettingsWindow"
+    Title="Settings"
     Width="400"
     Height="400"
     MinWidth="400"
     MinHeight="400"
+    DataContext="{Binding Path=SettingsWindowViewModel, Source={StaticResource Locator}}"
     mc:Ignorable="d">
     <Grid Margin="20" ShowGridLines="False">
         <Grid.ColumnDefinitions>
