--- a/Posetrix/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Posetrix/Views/MainWindow.xaml
@@ -7,24 +7,17 @@
     xmlns:local="clr-namespace:Posetrix"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:usercontrols="clr-namespace:Posetrix.Views.UserControls"
-    Title="Posetrix"
+    Title="{Binding WindowTitle}"
     Width="400"
     Height="680"
     MinWidth="400"
     MinHeight="680"
-    DataContext="{Binding Path=FoldersAddWindowViewModel, Source={StaticResource Locator}}"
+    d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
     Icon="pack://application:,,,/Images/Icons/book(1).png"
     ResizeMode="CanResize"
     ThemeMode="System"
     mc:Ignorable="d">
-    <Window.Resources>
-        <DataTemplate DataType="{x:Type core:CustomIntervalViewModel}">
-            <usercontrols:CustomInterval />
-        </DataTemplate>
-        <DataTemplate DataType="{x:Type core:PredefinedIntervalsViewModel}">
-            <usercontrols:PredefinedIntervals />
-        </DataTemplate>
-    </Window.Resources>
+    <Window.Resources />
     <Grid Margin="20" ShowGridLines="True">
         <Grid.RowDefinitions>
             <!--  Add referenced button  -->
@@ -41,10 +34,10 @@
 
 
         </Grid.RowDefinitions>
-
-        <usercontrols:ReferencesAdd Grid.Row="0" />
-        <usercontrols:PracticeModes Grid.Row="1" />
-        <usercontrols:ReferencesNumber Grid.Row="2" />
+        <ContentControl x:Name="ReferenceAddControlContainer" Grid.Row="0" />
+        <!--<usercontrols:ReferencesAdd Grid.Row="0" />-->
+        <!--<usercontrols:PracticeModes Grid.Row="1" />-->
+        <!--<usercontrols:ReferencesNumber Grid.Row="2" />-->
 
 
         <UniformGrid Grid.Row="3" Columns="2">
