--- a/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Views/MainWindow.xaml
@@ -15,7 +15,7 @@
     d:DataContext="{d:DesignInstance Type=core:MainWindowViewModel}"
     Icon="pack://application:,,,/Images/Icons/book(1).png"
     ResizeMode="CanResize"
-    ThemeMode="System"
+    ThemeMode="Light"
     mc:Ignorable="d">
     <Window.Resources />
     <Grid Margin="20" ShowGridLines="True">
@@ -30,7 +30,6 @@
             <RowDefinition Height="2*" />
             <!--  Start a sessiom button  -->
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="20" />
 
 
         </Grid.RowDefinitions>
@@ -56,6 +55,5 @@
                 Content="Start a drawing session"
                 Style="{DynamicResource AccentButtonStyle}" />
         </Grid>
-        <TextBlock Grid.Row="5" Text="{Binding ReferenceFolders}" />
     </Grid>
 </Window>
