--- a/Posetrix/Views/WIndows/SettingsWindow.xaml
+++ b/Posetrix/Views/WIndows/SettingsWindow.xaml
@@ -5,11 +5,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="Settings"
+    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
+    Title="{Binding WindowTitle}"
     Width="400"
     Height="400"
     MinWidth="400"
     MinHeight="400"
+    d:DataContext="{d:DesignInstance Type=viewmodels:SettingsWindowViewModel}"
     mc:Ignorable="d">
     <Grid Margin="20" ShowGridLines="False">
         <Grid.ColumnDefinitions>
