--- a/Posetrix/Views/UserControls/ReferencesAdd.xaml
+++ b/Posetrix/Views/UserControls/ReferencesAdd.xaml
@@ -29,7 +29,7 @@
                 VerticalAlignment="Center"
                 Click="ShowSettingsWindow_Click"
                 Content="&#xE713;"
-                FontFamily="{StaticResource SymbolThemeFontFamily}"
+                FontFamily="{StaticResource SegoeUIIcons}"
                 FontSize="16">
                 <Button.ToolTip>
                     <ToolTip>
@@ -56,7 +56,7 @@
             HorizontalAlignment="Stretch"
             Click="AddReferencesButton_Click"
             Content="&#xE710;"
-            FontFamily="{StaticResource SymbolThemeFontFamily}"
+            FontFamily="{StaticResource SegoeUIIcons}"
             FontSize="20"
             Style="{DynamicResource AccentButtonStyle}" />
         <TextBlock
