--- a/Posetrix/Views/WIndows/SessionWindow.xaml
+++ b/Posetrix/Views/WIndows/SessionWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="Posetrix.Views.SessionWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Posetrix.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Posetrix.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,7 +13,6 @@
     Height="450"
     d:DataContext="{d:DesignInstance Type=viewmodels:SessionWindowViewModel}"
     mc:Ignorable="d">
-
     <Window.Resources>
         <Style
             x:Key="ControlButton"
@@ -39,6 +39,7 @@
             <Setter Property="Padding" Value="0" />
 
         </Style>
+        <converters:BitmapImageLoader x:Key="ImageLoader" />
     </Window.Resources>
     <Grid Margin="20" ShowGridLines="False">
         <Grid.RowDefinitions>
@@ -52,9 +53,10 @@
             <TextBlock HorizontalAlignment="Right" Text="{Binding Seconds}" />
         </UniformGrid>
         <Image
-            Name="MyImage"
+            Name="SessionImage"
             Grid.Row="1"
-            Source="{Binding CurrentImage}" />
+            Source="{Binding CurrentImage, Converter={StaticResource ImageLoader}}"
+            Stretch="Uniform" />
         <!--<svg:SvgViewbox Source="Images/undraw_workout_gcgu.svg" Stretch="Uniform" />-->
         <!--<Image Grid.Row="0" Source="pack://application:,,,/Images/undraw_workout_gcgu.png" />-->
         <StackPanel
