--- a/Posetrix/Views/WIndows/FoldersAddWindow.xaml
+++ b/Posetrix/Views/WIndows/FoldersAddWindow.xaml
@@ -15,7 +15,7 @@
     MinHeight="400"
     d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
     mc:Ignorable="d">
-    <Grid Margin="20" ShowGridLines="True">
+    <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="8*" />
             <RowDefinition Height="Auto" />
