--- a/Posetrix/Views/MainWindow.xaml
+++ b/Posetrix/Views/MainWindow.xaml
@@ -92,7 +92,7 @@
                 Grid.Row="2"
                 Margin="0,0,0,10"
                 HorizontalAlignment="Center"
-                Text="{Binding FolderCount}" />
+                Text="{Binding FoldersInfo}" />
         </Grid>
         <!--<ContentControl x:Name="PracticeModesControlContainer" Grid.Row="1" />-->
         <Grid Grid.Row="1">
@@ -128,7 +128,7 @@
                 Text="I want to draw" />
             <TextBox
                 HorizontalAlignment="Stretch"
-                Text="{Binding SessionImageCounter}"
+                Text="{Binding CustomImageCount}"
                 ToolTip="0: Endless mode" />
             <!--<Button Command="{Binding IncrementCommand}" Content="Increment" />
     <Button Command="{Binding DecrementCommand}" Content="Decrement" />-->
