--- a/Posetrix/App.xaml
+++ b/Posetrix/App.xaml
@@ -7,11 +7,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <FontFamily x:Key="SegoeUIIcons">pack://application:,,,/Fonts/#Segoe Fluent Icons</FontFamily>
-            <!--<ResourceDictionary.MergedDictionaries>
-
+            <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/PresentationFramework.Fluent;component/Themes/Fluent.xaml" />
-
-            </ResourceDictionary.MergedDictionaries>-->
+            </ResourceDictionary.MergedDictionaries>
             <!--<services:ViewModelLocator x:Key="Locator" />-->
 
         </ResourceDictionary>
