--- a/Posetrix/Views/WIndows/SettingsWindow.xaml
+++ b/Posetrix/Views/WIndows/SettingsWindow.xaml
@@ -7,27 +7,22 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
     Title="{Binding WindowTitle}"
-    Width="400"
+    Width="480"
     Height="400"
-    MinWidth="400"
+    MinWidth="480"
     MinHeight="400"
     d:DataContext="{d:DesignInstance Type=viewmodels:SettingsWindowViewModel}"
     mc:Ignorable="d">
     <Grid Margin="20" ShowGridLines="False">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid
             Grid.Row="0"
-            Grid.ColumnSpan="2"
             Margin="0,0,0,20"
             Background="Transparent">
             <Border
@@ -44,10 +39,13 @@
                     <TextBlock
                         Grid.Column="0"
                         VerticalAlignment="Center"
-                        Text="Theme" />
+                        FontSize="14"
+                        Text="App theme" />
                     <ComboBox
                         Name="ChangeTheme"
                         Grid.Column="1"
+                        MinWidth="180"
+                        HorizontalAlignment="Right"
                         SelectedIndex="0"
                         SelectionChanged="ComboBox_SelectionChanged">
                         <ComboBoxItem Content="System" />
@@ -57,19 +55,34 @@
                 </Grid>
             </Border>
         </Grid>
-        <TextBlock
-            Grid.Row="1"
-            Grid.Column="0"
-            VerticalAlignment="Center"
-            Text="Sounds" />
-        <ComboBox
-            Grid.Row="1"
-            Grid.Column="1"
-            SelectedIndex="0">
-            <ComboBoxItem Content="Sound 1" />
-            <ComboBoxItem Content="Sound 2" />
-            <ComboBoxItem Content="Off" />
-        </ComboBox>
+        <Grid Grid.Row="1" Margin="0,0,0,20">
+            <Border
+                Padding="{StaticResource ExpanderPadding}"
+                Background="{DynamicResource ExpanderHeaderBackground}"
+                BorderBrush="{DynamicResource ExpanderHeaderBorderBrush}"
+                BorderThickness="{StaticResource ExpanderBorderThemeThickness}"
+                CornerRadius="{DynamicResource ControlCornerRadius}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Grid.Column="0"
+                        VerticalAlignment="Center"
+                        Text="Sounds" />
+                    <ComboBox
+                        Grid.Column="1"
+                        MinWidth="180"
+                        HorizontalAlignment="Right"
+                        SelectedIndex="0">
+                        <ComboBoxItem Content="Sound 1" />
+                        <ComboBoxItem Content="Sound 2" />
+                        <ComboBoxItem Content="Off" />
+                    </ComboBox>
+                </Grid>
+            </Border>
+        </Grid>
         <TextBlock
             Grid.Row="2"
             Grid.ColumnSpan="2"
